[metadata]
name = camel-learn
version = 1.0.0
author = Yongming Liu
author_email = yongming.liu@asu.edu
description = The official implementation for CAMEL: Curvature Augmented Manifold Embedding and Learning
long_description = file: README.rst, LICENSE.TXT
long_description_content_type = text/markdown/rst
keywords = CAMEL, dimension reduction, UMAP, tSNE, TriMap, PaCMAP, LargeVis, smallvis, manifold
url = https://github.com/ymlasu/CAMEL
project_urls =
    Bug Tracker = https://github.com/ymlasu/CAMEL/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Intended Audience :: Developers

[options]
package_dir =
    = source code
packages = find:
python_requires = >=3.9
install_requires =
    scikit-learn >= 1.3.0
    numba >= 0.59
    annoy >= 1.17
    numpy >= 1.24

[options.packages.find]
where = source code
